--- a/themes/bamboo/source/css/_partial/side.styl
+++ b/themes/bamboo/source/css/_partial/side.styl
@@ -193,8 +193,9 @@
       }
     } 
     @media screen and (max-width: 992px) {
+      display: none;
       position: fixed;
-      right: -100%;
+      right: 45px;
       bottom: 50px;
       z-index: 100;
       width: 300px;
